--- a/package.json
+++ b/package.json
@@ -39,5 +39,5 @@
   "bugs": {
     "url": "https://github.com/lyne-design-system/lyne-icons/issues"
   },
-  "homepage": "https://github.com/lyne-design-system/lyne-design-tokens#readme"
+  "homepage": "https://github.com/lyne-design-system/lyne-icons/blob/master/README.md"
 }
