--- a/.releaserc
+++ b/.releaserc
@@ -12,7 +12,8 @@
         "package.json",
         "package-lock.json",
         "CHANGELOG.md",
-        "properties/**/*.json"
+        "icons/**/*.svg",
+        "icons/**/*.json
       ],
       "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
     }],
