--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint": "^7.0.0",
     "eslint-plugin-yaml": "^0.3.0",
     "husky": "^4.2.5",
+    "minimist": "~1.2.5",
     "semantic-release": "^17.0.8",
     "semantic-release-slack-bot": "^1.6.2",
     "shelljs": "~0.8.4",
