--- a/.releaserc
+++ b/.releaserc
@@ -12,8 +12,8 @@
         "package.json",
         "package-lock.json",
         "CHANGELOG.md",
-        "icons/**/*.svg",
-        "icons/**/*.json
+        "dist/**/*.svg",
+        "dist/**/*.json
       ],
       "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
     }],
