--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,8 @@ jobs:
       script:
       - npm run lint
       - npm run icons:extract
+      - node ci/gitPushProperties.js -i "$TRAVIS_BUILD_ID"
+
+      after_success:
+      - npm run semantic-release
+      - node ./ci/triggerLyneComponents.js -i "$TRAVIS_BUILD_ID"
