--- a/.releaserc
+++ b/.releaserc
@@ -13,7 +13,7 @@
         "package-lock.json",
         "CHANGELOG.md",
         "dist/**/*.svg",
-        "dist/**/*.json
+        "dist/**/*.json"
       ],
       "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
     }],
