--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "3.0.0",
   "description": "Icons for the Lyne Design System",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "lyne-helper-trigger-travis": "~1.0.1"
+  },
   "devDependencies": {
     "@commitlint/cli": "^9.0.1",
     "@commitlint/config-conventional": "~10.0.0",
