chore: update base config package, install yml plugin

--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "axios": "~0.20.0",
     "dotenv": "~8.2.0",
     "eslint": "^7.0.0",
+    "eslint-plugin-yaml": "~0.3.0",
     "husky": "^4.2.5",
-    "lyne-helper-eslint-config": "~1.0.0",
+    "lyne-helper-eslint-config": "~1.0.1",
     "minimist": "~1.2.5",
     "semantic-release": "^17.0.8",
     "semantic-release-slack-bot": "^1.6.2",
