--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "lyne-icons",
-  "version": "3.1.5",
+  "version": "3.1.4",
   "description": "Icons for the Lyne Design System",
   "main": "index.js",
+  "dependencies": {
+    "lyne-helper-trigger-travis": "~1.0.1"
+  },
   "devDependencies": {
     "@commitlint/cli": "^9.0.1",
     "@commitlint/config-conventional": "~10.0.0",
@@ -16,7 +19,6 @@
     "husky": "^4.2.5",
     "lyne-helper-eslint-config": "~1.0.1",
     "lyne-helper-figma-api": "~1.1.3",
-    "lyne-helper-trigger-travis": "~1.0.2",
     "minimist": "~1.2.5",
     "semantic-release": "^17.0.8",
     "semantic-release-slack-bot": "^1.6.2",
