--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Icons for the Lyne Design System",
   "main": "index.js",
   "dependencies": {
-    "lyne-helper-trigger-travis": "~1.0.3"
+    "lyne-helper-trigger-travis": "~1.0.3",
+    "ncp": "~2.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^9.0.1",
@@ -20,6 +21,7 @@
     "lyne-helper-eslint-config": "~1.0.1",
     "lyne-helper-figma-api": "~1.1.3",
     "minimist": "~1.2.5",
+    "netlify-cli": "~2.64.0",
     "semantic-release": "^17.0.8",
     "semantic-release-slack-bot": "^1.6.2",
     "shelljs": "~0.8.4",
