--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,5 @@ jobs:
       after_success:
       - npm run semantic-release
       - node ./ci/triggerLyneComponents.js -i "$TRAVIS_BUILD_ID" -j $(< .version)
+      - node ./ci/createCdnAssets.js -i $(< .version)
+      - ./ci/deploy_cdn_assets.sh
