--- a/.travis.yml
+++ b/.travis.yml
@@ -22,5 +22,8 @@ jobs:
       after_success:
       - npm run semantic-release
       - node ./ci/triggerLyneComponents.js -i "$TRAVIS_BUILD_ID" -j $(< .version)
+
+      # prepare git for pushes
+      - git remote set-url origin https://lyne-design-system:$(GH_TOKEN)@github.com/lyne-design-system/lyne-icons.git
       - node ./ci/createCdnAssets.js -i $(< .version)
       - ./ci/deploy_cdn_assets.sh
