--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "lyne-helper-trigger-travis": "~1.0.3",
-    "ncp": "~2.0.0"
+    "ncp": "~2.0.0",
+    "rimraf": "~3.0.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^9.0.1",
