--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "semantic-release": "~17.4.4",
     "semantic-release-slack-bot": "^2.1.0",
     "shelljs": "~0.8.4",
-    "simple-git": "~2.40.0"
+    "simple-git": "~2.40.0",
+    "svg-slimming": "~1.5.3"
   },
   "files": [
     "dist/"
